--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -1,4 +1,7 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/oqzulz329/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/oqzulz329/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/11.jpg" title="头条"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/13.jpg" title="专题"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p> <a href="https://github.com/oqzulz329/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/hG75Ez1eTyeZN.mp4" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/YongHeng-360p.mp4" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/Lijianhui-200804-720.mp4" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/dmt.mp4" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/rs/Uc6y.mp4" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-10/425.mp4" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-12-23/lin-720p.mp4" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/wnrl.mp4" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/5-YiSu_MH-360p.mp4" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/1-Xuezhongmei_MH-360p.mp4" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-18/huangxiaomin-tuidang.mp4" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr><tr><td width="742"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://gitlab.com/szzdlab/www/raw/master/v/2018-11-4/SY-Classical-Chinese-Dance-Technique-Collection-2018.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-11-12/zf-dsp-1128.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-1/st5-29.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/tzrs.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/er3n_3VVJ.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/XmL0_0XDL2p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/rs/NG8l.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/wt6Y_vPhM.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/vG2w_fwq.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O2jN_uD.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/C1WZ_mj.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/JZ5e_5Vusp.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/lyp/0iY.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://gitlab.com/szzdlab/m1/raw/master/mjjy.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/c4rB_QQbr.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O23c_E.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/oqzulz329/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/oqzulz329/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/14/n12475380.md#1" target="_blank">《共产主义黑皮书》：社会团体的种族化</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/14/n12475380.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2017/12/dcbb5ad1ea37934a168afd29d68d142e-150x120.jpg" align ="left"></a>应该严格而客观地评判红色高棉的罪行，以便可以将柬埔寨的经历与本世纪其它重大恐怖事件及其在共产主义历史上被分配的适当份量作比较。这种方法也有非常强大的法律原因，因为许多柬共领导人仍然活着，甚至以官方身份活跃着。他们应该被允许自由走动吗？如果不应该，那么应该对他们进行什么指控呢？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 4:12 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12483848.md#1" target="_blank">田云：电脑门发酵 拜登竞选经理自曝民调不实</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12483848.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/biden-and-harris-2-1200x800-150x120.jpg" align ="left"></a>这两条消息很不寻常。大选进入白热化阶段之际，拜登竞选团队忽然灭自家威风，这是在为败选打预防针吗？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 3:18 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12483755.md#1" target="_blank">【网海拾贝】如何应对中共是今年美大选关键议题</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12483755.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/09/Biden-and-Trump-1200x732-150x120.jpg" align ="left"></a>Thayer教授和我在国会山报发文，指如何应对中共国是今年大选关键议题，但却被忽视未能充分辩论；无论谁上台，美国必须有效反制党国，否则将贻害无穷，希望美国选民在11月的大选中，将党国问题作为重要考量来投票，因为这涉及到美国和自由世界的未来和前途。——@lianchaohan......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 11:36 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483244.md#1" target="_blank">杨威：缩水的政治局会议再现高层诡异</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483244.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229058108-150x120.jpg" align ="left"></a>中共党媒报导，10月16日，中共政治局再次召开会议，仅审议了一个《成渝地区双城经济圈建设规划纲要》，下午，集体学习量子科技研究和应用前景。
 政治局会议明显缩水，习近平急于再次露面，健康问题的猜测似乎排除了，但却露出了更多的诡异之处。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 6:18 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482897.md#1" target="_blank">【名家专栏】拜登-哈里斯将打击宗教自由</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482897.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/biden-and-harris-2-1200x800-150x120.jpg" align ="left"></a>在周三（10月7日）晚上进行的副总统辩论中，副总统迈克?彭斯（Mike Pence）完胜参议员卡马拉?哈里斯（Kamala Harris）。在辩论即将结束之际，两位官员又激烈争论了关于最高法院提名艾米?科尼?巴雷特（Amy Coney Barrett）悬而未决的问题，以及因她的提名席卷而来的令人不齿的极端反天主教狂潮。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 5:59 AM			</td></tr>
@@ -27,8 +30,9 @@
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12480522.md#1" target="_blank">【名家专栏】美就业率增长 经济复苏续加快</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12480522.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1270681119-150x120.jpg" align ="left"></a>上个月（9月份）美国失业人口减少了100万。按照这个速度，失业减缓、就业市场逐渐复苏，全美失业率可望在六个月之内恢复到疫情前的水平。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月16日 6:19 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12479917.md#1" target="_blank">田云：美总统候选人答市民提问 再打脸中共</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12479917.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229094974-150x120.jpg" align ="left"></a>关于疫情、经济、法治、种族等事项，中国人民同样有权利、有必要质问当局。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月16日 4:55 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12480378.md#1" target="_blank">王赫：安倍力促川普围剿中共</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12480378.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/10/4f726f80baa83e61bf8985b6895352b0-150x120.jpg" align ="left"></a>在内阁频繁更换的日本，安倍晋三能长期执政也算是个雄才。他对日本政治和世界局势的最大影响之一，就是提出了“自由和开放的印度太平洋”构想，促成了美国川普政府现正大力推进的印太战略。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月16日 4:50 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/15/n12478939.md#1" target="_blank">谢田：为何挺川黑川者众、关注拜登者寡？</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/15/n12478939.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/09/LEI4953-1-1-150x120.jpg" align ="left"></a>美国2020年大选中，有一个颇为有趣的现象，堕落的主流媒体除外，在竞选集会、社交媒体和其它媒介中，人们不难看出，美国人挺川、黑川的人数，都非常的多；但关注拜登的人数，不管是支持还是反对的，都非常的少。比如，前副总统拜登10月13日在佛罗里达的竞选活动，出席者门可罗雀，汽车都成了观众。而川普总统前一天、10月12日也是在.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月16日 2:53 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12479586.md#1" target="_blank">袁斌：习近平视察深圳 一路部署“群众演员”</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12479586.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/22-1-150x120.jpg" align ="left"></a>网友发布的一则视频显示，10月14日，习近平在深圳视察，一些“演员”群众早早就被安排在某地习近平乘车将要经过的路的两侧。当看到习近平的车队出现时，“导演”一声令下：“喊起来！举起手来！”所有的“演员”群众开始高喊：“习大大好！”，并高挥着手臂。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月16日 2:12 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/14/n12475346.md#1" target="_blank">朱瑞霞：于湾冤魂终古在，楚乡旧事扰人宁（三）</a><br></h3>葛伦平先生的爷爷葛学绍先生，饿死时约50岁；大伯伯葛明农先生，饿死时约24岁。
+
+葛明俊先生的母亲童氏，饿死时约60岁。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 2:30 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483399.md#1" target="_blank">袁斌：出卖国土，中共岂能代表中国人</a><br></h3>多年来，中共总是千方百计把自己装扮成民族主义和爱国主义的卫道士，“一定要解放台湾”、“统一台湾”便是它们一直挂在嘴上的宣传口号，而“卖国求荣”、“反华势力”则是它们经常用来打击别人的政治棍子。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 11:07 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482660.md#1" target="_blank">海网：中共早就给拜登挖好坑了</a><br></h3>苟延忙把外势找，
 统战拜登贪战小。
@@ -39,7 +43,5 @@
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12481413.md#1" target="_blank">王友群：先帮中共使劲整人后被整死的吴晗</a><br></h3>吴晗在《朱元璋传》中写道：“网络布置好了，包围圈逐渐缩小了。苍鹰在天上盘旋，猎犬在地上追逐，一片号角声，呐喊声，呼鹰唤狗声，已入网的文人一个个断脰破胸，呻吟在血泊中。”这段话正是1949年中共夺取政权后对待文人的形象写照。
 吴晗背弃恩师投向中共
 吴晗，浙江金华义乌人，1928年秋，考入上海中国公学，成为胡适的学生.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 5:55 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/14/n12475358.md#1" target="_blank">朱瑞霞：于湾冤魂终古在，楚乡旧事扰人宁（二）</a><br></h3>1947年冬天的一个晚上，十三太保中的几个坏蛋，将啊唔帽子（一种针织的筒状黑色帽子）套在头上拉下来遮住几张罪恶的嘴脸，趁着月黑风高，带着长枪短枪、举着用大扫帚醮上洋油（煤油）做就的火把，撞开大门，闯进了租住在葛明中先生家房子里的朱传财家中，口口声声叫着：“把钱拿出来！拿钱消灾！不然一把火把你家烧带（烧掉）、叫你全家老小.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月16日 4:36 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12479643.md#1" target="_blank">【网海拾贝】中国再被列侵犯网络自由最严重国家</a><br></h3>美国人权活动组织自由之家10月14日公布该机构本年度网络自由报告，中国再次被列为65个国家中网络自由情况最差的国家。报告指出，自新冠疫情蔓延全球后，全球网络自由度下降呈现三个特点：多国政治领导人以疫情防控为借口限制公民获取信息；政府以抗击疫情为由扩大监控权力，用前所未有的方式部署新科技手段搜集和分析个人数据；全球互联网.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月16日 10:38 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/news392.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/news392_3.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/oqzulz329/djy/blob/master/gb/news392_2.md#1<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/news392_2.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/oqzulz329/djy/blob/master/gb/news392_2.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news392_2.htm">https://www.epochtimes.com/gb/news392_2.htm</a>    （国内需<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
