--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -376,7 +376,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/13/n11255006.md#1" target="_blank">【征文】凌晓辉：贞洁论（一）</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/13/n7893575.md#1" target="_blank">专家看万人游行：法轮功在世界舞台令人注目</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/2/n10015801.md#1" target="_blank">文武：中共篡政（一）</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/1/28/n3787288.md#1" target="_blank">一名高干子弟给习近平公开信曝酷刑及逼供秘闻</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
