--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -376,7 +376,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/22/n10326635.md#1" target="_blank">杨宁：“四二五”政治构陷 江派黑手待拿下</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/17/n10720119.md#1" target="_blank">俞晓薇：迫害好人路不通 中共作恶者务必赎罪</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/14/n10144729.md#1" target="_blank">林辉：支持缅共的知青旅往事并不如烟</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/17/n10401300.md#1" target="_blank">三位西方富豪的经商成功之道</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
