--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -376,7 +376,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/14/n10144729.md#1" target="_blank">林辉：支持缅共的知青旅往事并不如烟</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/17/n10401300.md#1" target="_blank">三位西方富豪的经商成功之道</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/11/n11648921.md#1" target="_blank">林辉：国家足球队头号前锋文革缘何自杀？</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/2/n10610921.md#1" target="_blank">8岁自闭儿奇迹“开心锁” 变身最快乐男孩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
