--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -376,7 +376,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/13/n11449283.md#1" target="_blank">袁斌：巫宁坤们的遭遇告诉后人什么</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/11/6/17/n3289382.md#1" target="_blank">探寻真相 兼听则明 ——法轮功小问答</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/28/n10749135.md#1" target="_blank">林辉：邓小平女儿指北大曾变成法西斯集中营</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/6/4/n9225929.md#1" target="_blank">对中国法轮功学员被迫害的调查（1）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
